[package]
name = "rust-demofile-final"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.0", features = ["serde"] }
async-recursion = "1.0.0"
custom-bitreader = { path = "../custom_bitreader" }
custom-dispatcher = { path = "../custom_dispatcher" }
dhat = "0.3.2"
env_logger = "0.9.1"
event-emitter-rs = "0.1.4"
futures = "0.3.24"
glam = "0.22.0"
image = "0.24.5"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
plotters = { version = "0.3.4" }
# plotly = { version = "0.8.3", features = ["kaleido"] }
prost = "0.10.4"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23.0", features = ["full"] }


uuid = { version = "0.8", features = ["v4"] }
bincode = "1.3.1"

# jemallocator = "0.5.0"

[profile.release]
codegen-units = 1
lto = "fat"

# [features]
# dhat-heap = []
# dhat-ad-hoc = []